# COSC342

./: .gitignore
02/: CMakeLists.txt  Matrix.cpp  Matrix.h  Vector.h  matrixMain.cpp
03/: CMakeLists.txt  Image.cpp  Image.h  ImageTransforms.cpp  Pixel.h  Vector.cpp
04/Shapes/: CMakeLists.txt  Circle.cpp  Circle.h  Image.cpp  Image.h  Pixel.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  shapesMain.cpp
04/Shapes(3)/: CMakeLists.txt  Image.cpp  Image.h  Pixel.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  shapesMain.cpp
04/cppObjects/: CMakeLists.txt  Derived.cpp  Derived.h  Object.cpp  Object.h  objectsMain.cpp
05-06-RayTracer2021/: Cube.cpp  Plane.cpp  Scene.cpp  Sphere.cpp  cubeScene.txt  lightTesting.txt  planeScene.txt
07-OpenGLIntro/: CMakeLists.txt
07-OpenGLIntro/Part01/: Part01  simpleWindow.cpp
07-OpenGLIntro/Part02/: Part02  basicShader.frag  basicShader.vert  colorShader.frag  redTriangle.cpp
07-OpenGLIntro/common/: ColorShader.cpp  ColorShader.hpp  Object.cpp  Quad.cpp  Quad.hpp
OpenGLContinuation2021/: CMakeLists.txt
OpenGLContinuation2021/Part03/: textureShader.frag  texturedCube.cpp
OpenGLContinuation2021/Part04/: modelLoading.cpp  simpleColor.frag  simpleColor.vert  textureShader.frag  textureShader.vert
RenderEngine/: BUILDING.txt  CMakeLists.txt  report.docx
assignment1/: cup.blend  cup.blend1  report.docx  scene.blend  scene.blend1
assignment2/: Cube.cpp  Cylinder.cpp  Plane.cpp  Scene.cpp  Tube.cpp  cockAndBalls.txt  cubeScene.txt  lighting.txt  objectTest.txt  report.docx  shapes.txt
(+24 files in other folders)
